avançando no projeto, adicionei imagens e uns lorem na segunda página

--- a/pagina2/pagina2.html
+++ b/pagina2/pagina2.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>teste</h1>
+    <header>
+        <a href="../index.html">Voltar</a>
+        <a href="">Outra Página</a>
+    </header>
+    <main>
+        <div class="primeira">
+            <img class="primera-imagem" src="../imagens/01.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quo, quasi suscipit molestiae, necessitatibus libero itaque officia sequi impedit repellat similique, nam facere temporibus corrupti! Magnam quod ad sapiente molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam voluptatem recusandae, nesciunt porro laborum voluptatum similique. Voluptas odit quibusdam, beatae qui sapiente, hic, ab animi velit praesentium debitis distinctio!</p>
+        </div>
+        <div class="segunda">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum incidunt culpa consequuntur. Iure, quia ipsa earum consequatur quaerat, molestiae, aut distinctio odio dolorem saepe tempore natus corporis nulla unde vitae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut vel placeat eum distinctio nostrum? Ducimus, rerum voluptatum! Iste sequi magnam laudantium nam obcaecati quae odio quam, laboriosam debitis corrupti a.</p>
+            <img class="segunda-imagem" src="../imagens/02.jpg" alt="">
+        </div>
+        <div class="terceira">
+            <img class="terceira-imagem" src="../imagens/03.jpg" alt="">
+        </div>
+    </main>
 </body>
 </html>
