--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Oioi meu bem, fiz esse site para você</h1>
+        <h1>oioi meu bem, fiz esse site para você</h1>
         <h2>Espero que goste, fiz com muito amor e carinho</h2>
         <h3>registrei alguns momentos nossos e queria compartilhar aqui, nesse site.</h3>
         <h1>aceita relembrar esses momentos ?</h1>
