avançando com video

--- a/pagina2/pagina2.html
+++ b/pagina2/pagina2.html
@@ -22,6 +22,14 @@
         </div>
         <div class="terceira">
             <img class="terceira-imagem" src="../imagens/03.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium odit atque magni sit ex exercitationem fugiat esse voluptatem, unde quisquam accusantium possimus architecto provident voluptates cupiditate temporibus maxime, incidunt deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sequi temporibus culpa nisi quaerat in, quia, eum amet omnis ipsa rerum, dolorem nulla suscipit consequatur animi at. Molestiae, voluptates eligendi!</p>
+        </div>
+        <div class="quarta">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius atque facilis temporibus, aut numquam aliquam ipsam error ullam laboriosam doloremque aperiam quasi nam qui voluptatum repudiandae cum praesentium sed quis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. At nobis, maiores unde aut harum voluptates saepe molestias rerum tenetur odio dicta laudantium natus. Sapiente nemo nostrum inventore, corporis eaque officia!</p>
+            <img class="quarta-imagem" src="../imagens/04.jpg" alt="">
+        </div>
+        <div class="video">
+            <video id="meu-video" controls="" src="../video/video.mp4" type="video/mp4"></video>
         </div>
     </main>
 </body>
