--- a/pagina2/pagina2.html
+++ b/pagina2/pagina2.html
@@ -8,29 +8,34 @@
 </head>
 <body>
     <header>
-        <a href="../index.html">Voltar</a>
-        <a href="">Outra Página</a>
+        <a href="../index.html">Voltar❤️</a>
+        <p onclick="encerrar()" style="cursor: pointer;">Fim❤️</p>
     </header>
     <main>
         <div class="primeira">
             <img class="primera-imagem" src="../imagens/01.jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quo, quasi suscipit molestiae, necessitatibus libero itaque officia sequi impedit repellat similique, nam facere temporibus corrupti! Magnam quod ad sapiente molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam voluptatem recusandae, nesciunt porro laborum voluptatum similique. Voluptas odit quibusdam, beatae qui sapiente, hic, ab animi velit praesentium debitis distinctio!</p>
+            <p>Esse dia da piscina foi muito bom, passamos muito tempo juntos, ficamos um tempo de molho na piscina conversando, enquanto os meninos brincavam de algo que não lembro. Lembro que o Vinícius ficava me chamando pra brincar e eu só falando 'bora, bora, bora' e não ia, kkk, não queria sair de perto de uma certa pessoa, não queria que aquele momento acabasse. Comemos muito também nesse dia, muita carne e farofa. Também tinha baião né kk, Levei dois quilos de baião e parece que sobrou dois quilos e meio, kkk. De alguma forma, o baião aumentou. Nesse dia, também passamos um momento no balanço, fomos todos para o balanço e depois o Dheysson ficou balançando nós muito alto. Um tempinho depois chegou a hora de todos se despedirem. O melhor momento da despedida foi o abraço, nos abraçamos e um tempinho veio outro abraço.</p>
         </div>
         <div class="segunda">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum incidunt culpa consequuntur. Iure, quia ipsa earum consequatur quaerat, molestiae, aut distinctio odio dolorem saepe tempore natus corporis nulla unde vitae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut vel placeat eum distinctio nostrum? Ducimus, rerum voluptatum! Iste sequi magnam laudantium nam obcaecati quae odio quam, laboriosam debitis corrupti a.</p>
+            <p>Nessa fotinha estávamos no Guaraná, comemorando um dia especial, meu aniversário. Estava fazendo 24 aninhos, o temido 24, kkk. Esse dia não foi uma comemoração como eu imaginei; queria que fosse diferente, em um ambiente diferente, e que tivesse outras pessoas também. Juntar todos os meus amigos sem intrigas. Apesar dos apesares, foi um dia muito bom. Tivemos um momento no Rota, comemos muita pizza, meu bem não gostou da minha pizza favorita do Rota, mas tudo bem né kkk. Foi muito bom estar com "todos" no Rota. Depois fomos para o Guaraná, onde tiramos essa fotinha linda e muitas outras. Também experimentei o sorvete kk. Estava esperando para tomar com meu bem, e até hoje (20/12/2023), não comi novamente. Talvez vou comer com meu bem de novo, assim espero.</p>
             <img class="segunda-imagem" src="../imagens/02.jpg" alt="">
         </div>
         <div class="terceira">
             <img class="terceira-imagem" src="../imagens/03.jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium odit atque magni sit ex exercitationem fugiat esse voluptatem, unde quisquam accusantium possimus architecto provident voluptates cupiditate temporibus maxime, incidunt deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sequi temporibus culpa nisi quaerat in, quia, eum amet omnis ipsa rerum, dolorem nulla suscipit consequatur animi at. Molestiae, voluptates eligendi!</p>
+            <p>Aqui estávamos no ginásio, assistindo aos jogos e esperando o resultado da gincana da sua escola. Nesse dia, demonstrei um pouco da minha linguagem de amor kk. Praticamente todas as vezes que ia falar com meu bem, eu ia lá e pegava no teu braço. Sou assim, né ?. Passamos muito tempo lá, sentadinhos e conversando, aproveitando os poucos momentos que temos juntos. Depois de um tempinho, fiquei lá, sentadinho e comportado igual a Marcelina, porque meu bem foi lá para cima dos assentos. Fiquei lá até o resultado, e a equipe do meu bem ficou em último. Acontece, kk. Meu bem foi até preparada de branco, porque parece que já sabia do resultado kk. Quando acabou, todos nós passamos em casa e ficamos um tempinho lá. Foi um dia inesquecível, e lembro sempre.</p>
         </div>
         <div class="quarta">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius atque facilis temporibus, aut numquam aliquam ipsam error ullam laboriosam doloremque aperiam quasi nam qui voluptatum repudiandae cum praesentium sed quis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. At nobis, maiores unde aut harum voluptates saepe molestias rerum tenetur odio dicta laudantium natus. Sapiente nemo nostrum inventore, corporis eaque officia!</p>
+            <p>Deixo essa fotinha para registrar todos os momentos das nossas caminhadas. Amo nossas caminhadas, cada momento que passamos juntos nela, cada conversa, cada sorriso que damos juntos, nossos abraços, nossas corridinhas e as apostas de quem chega primeiro. Não consigo acompanhar essa mulher nunca, aff kk. É simplesmente incrível. Não quero que esses momentos acabem. Já fico ansioso para toda segunda, quarta e sexta, para poder caminhar com meu bem, e todas as vezes que chego na praça e vejo você de longe, pois conheço teu caminhar de longe, meu coração já acelera e fico com um sorrisinho no rosto, só de felicidade.</p>
             <img class="quarta-imagem" src="../imagens/04.jpg" alt="">
         </div>
         <div class="video">
-            <video id="meu-video" controls="" src="../video/video.mp4" type="video/mp4"></video>
+            <p>por fim, deixo esse lindo vídeo❤️</p>
+            <video id="meu-video" controls="" src="../video/video2.mp4" type="video/mp4"></video>
         </div>
     </main>
+    <footer class="rodape">
+        <h2>Espero muito que goste desse presente, amo você❤️.</h2>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
