--- a/pagina2/pagina2.html
+++ b/pagina2/pagina2.html
@@ -12,6 +12,9 @@
         <p onclick="encerrar()" style="cursor: pointer;">Fim❤️</p>
     </header>
     <main>
+        <div class="apresentacao">
+            <h2>Alguns momentos nosso, espero que goste❤️</h2>
+        </div>
         <div class="primeira">
             <img class="primera-imagem" src="../imagens/01.jpg" alt="">
             <p>Esse dia da piscina foi muito bom, passamos muito tempo juntos, ficamos um tempo de molho na piscina conversando, enquanto os meninos brincavam de algo que não lembro. Lembro que o Vinícius ficava me chamando pra brincar e eu só falando 'bora, bora, bora' e não ia, kkk, não queria sair de perto de uma certa pessoa, não queria que aquele momento acabasse. Comemos muito também nesse dia, muita carne e farofa. Também tinha baião né kk, Levei dois quilos de baião e parece que sobrou dois quilos e meio, kkk. De alguma forma, o baião aumentou. Nesse dia, também passamos um momento no balanço, fomos todos para o balanço e depois o Dheysson ficou balançando nós muito alto. Um tempinho depois chegou a hora de todos se despedirem. O melhor momento da despedida foi o abraço, nos abraçamos e um tempinho veio outro abraço.</p>
