--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>oioi meu bem, fiz esse site para você</h1>
         <h2>Espero que goste, fiz com muito amor e carinho</h2>
-        <h3>registrei alguns momentos nossos e queria compartilhar aqui, nesse site.</h3>
+        <h3>registrei alguns momentos nosso e queria compartilhar aqui, nesse site.</h3>
         <h1>aceita relembrar esses momentos ?</h1>
         <button class="heart" onclick="mostrarResposta()">Sim</button>
         <button id="nao" onmouseover="mudarPosicao()">Não</button>
